Added near pixel perfect styles and altered server to also send back itemId

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
   <body>
     <div style="display: flex;">
       <div style="width: 21.3%;"> </div>
-      <div style="display: flex; flex-direction: column; align-content: center;">
+      <div style="display: flex; flex-direction: column; align-items: center;">
         <div id="RECOMMENDATIONS_CUSTOMER_ATTACH_POINT"></div>
         <div id="RECOMMENDATIONS_TREAT_ATTACH_POINT"></div>
         <div id="RECOMMENDATIONS_PET_ATTACH_POINT"></div>
