Started integrating S3 Cloudfront

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,9 @@
 
       // const N_IP = '54.183.137.155';
 
-      axios.get(`http://${N_IP}:3004/app.js`)
+      const url = `http://${N_IP}:3004/app.js`;
+
+      axios.get(url)
         .then((response) => {
           eval(response.data)
         })
